--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "next": "^15.5.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.14",
@@ -26,6 +25,7 @@
     "eslint-config-next": "^15.5.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
